# vim-clangd

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
